--- a/README.adoc
+++ b/README.adoc
@@ -2,10 +2,10 @@
 
 NOTE: TP de deux slots de 1h20
 
-## Nom des étudiants de ce binôme 
+## Priscilla BOURON & Yves-Marie IP 
 WARNING: NE PAS OUBLIER DE MENTIONNER LES DEUX NOMS !
 
-#XXX# et #YYY#
+#Priscilla BOURON & Yves-Marie IP
 
 Commentaires éventuels des étudiants : #XXXXXX#
 
@@ -16,7 +16,7 @@ WARNING: A faire impérativement *AVANT* le TP, nous n'aurons pas le temps penda
 * disposer d'au moins un compte Github par binôme ;
 * apporter au moins un portable Linux, MacOS ou Microsoft Windows par binôme ;
 * un JDK 8+  (conseillé : OpenJdk. Sous linux, installer le paquet `openjdk-13-jdk` par exemple) ;
-* Eclipse 2019+ (ou un autre IDE Java) installé ;
+* Eclipse 2019+ (ou un autre IDE) installé
 * Un client PostgreSQSL (conseillé : plugin Eclipse `DBeaver IDE`) ;
 * un démon Docker récent 2018+ ;
 * disposer d'une image Docker Postgresql en local, faire `docker pull postgres` ;
@@ -47,19 +47,26 @@ _Temps estimé : 1 h_
 
 * Observer le code du projet `todolist-debut-ex1`
 
-*Le code est-il structuré en couches ? Imaginez un projet d'entreprise constitué de centaines de classes ainsi structuré : que risque-t-il d'arriver ?*
+IMPORTANT: [Question]  Le code est-il structuré en couches ? Imaginez un projet d'entreprise constitué de centaines de classes ainsi structuré : que risque-t-il d'arriver ?
+IMPORTANT: [Réponse] Le projet n'est pas en couche étant donné que toutes les sources sont dans le même projet et le même package. De plus dans les fichiers certaines classes ont des utilisations ambigues (classe ToDoItem utilisée comme entité JPA et DTO). Si un projet de grande empleur était structuré ainsi, la maintenabilitée serait difficile et source d'erreurs et les tests seraient chaotiques.
 
-*Où se trouve le code métier (voir la règle de gestion RG1) ? Cette règle est-elle facilement testable par un test unitaire ?*
+IMPORTANT: [Question]  Que se passe-t-il si l'on renomme une colonne de la base de donnée ?
+IMPORTANT: [Réponse] Si une colonne de la base de donnée était modifiée, il faudrait modifier l'entité JPA (classe ToDoItem).
+
+IMPORTANT: [Question]  Où se trouve le code métier (voir la règle de gestion RG1) ? cette règle est-elle facilement testable par un test unitaire ? 
+IMPORTANT: [Réponse] Il se trouve dans la classe ToDoListController (ce qui dans une architecture en couche serait la couche service, au lieu de la couche domaine). Cette règle métier n'est pas facie à tester puisqu'elle nécessite un appel http sur le point d'entrée Rest.
 
 * Lancer une base PostgreSQL en Docker :
 ```bash
 docker run --rm -it -e POSTGRES_PASSWORD=password -p 5432:5432 postgres
 ```
-*Expliquer cette ligne de commande (y compris les options utilisées)*
+IMPORTANT: [Question]  Expliquer cette ligne de commande (y compris les options utilisées)
+
+IMPORTANT: [Question]  Lancer les commandes `docker ps` et `ps -eaf | grep postgres`, à quoi correspondent les lignes affichées ? Que remarquez vous ?
 
 * Compléter le code manquant dans la méthode `TodoListController.createTodoItem()`
 
-*Pourquoi `todoItemRepository` est-il `null` ? Quelle est la meilleure façon de l'injecter ?*
+* IMPORTANT: [Question] Pourquoi `todoItemRepository` est-il `null` ? Quelle est la meilleure façon de l'injecter ? 
 
 * Modifier le code en conséquence.
 
@@ -88,7 +95,7 @@ _Temps estimé : 1 h_
 * Partir du projet `todolist-debut-ex2`
 
 
-NOTE: le projet a été réusiné suivant les principes de l'architecture hexagonale : 
+NOTE: le projet a été refactoré suivant les principes de l'architecture hexagonale : 
 
 image::images/archi_hexagonale.png[]
 Source : http://leanpub.com/get-your-hands-dirty-on-clean-architecture[Tom Hombergs]
@@ -97,14 +104,10 @@ Source : http://leanpub.com/get-your-hands-dirty-on-clean-architecture[Tom Hombe
   - la couche application qui contient tous les contrats : ports (interfaces) et les implémentations des ports d'entrée (ou "use case") et qui servent à orchestrer les entités.
   - la couche entités qui contient les entités (au sens DDD, pas au sens JPA). En général, classes complexes (méthodes riches, relations entre les entités,  pas de simples POJO anémiques)
 
-*Rappeler en quelques lignes les grands principes de cette architecture.*
+IMPORTANT: [Question] Rappeler en quelques lignes les grands principes de cette architecture.
+IMPORTANT: [Réponse] L'idée de l'architecture hexagonale est de développer autour de la logique métier, autour du domaine. Cela permet d'éviter les perversions d'une approche purement technique qui engendre de mauvais développements ou des développements inutiles. Les ports (input/output) sont les contrats engageant le domaine et les parties in/out. La partie in consomme le domaine et attend certaines données de celui-ci ; la partie out est consommée par le domaine et persiste les données transmises par ce dernier.
 
-Complétez ce code avec une fonctionnalité de création de `TodoItem`  persisté en base et appelé depuis un endpoint REST `POST /todos` qui :
-
-* prend un `TodoItem` au format JSON dans le body (voir exemple de contenu plus haut)
-* renvoie un code `201` en cas de succès. 
-
-La fonctionnalité à implémenter est contractualisée par le port d'entrée `AddTodoItem`.
+Complétez ce code avec une fonctionnalité de création de `TodoItem`  persisté en base et appelé depuis un endpoint REST `POST /todos` qui renvoi un code `201` en cas de succès. La fonctionnalité à implémenter est contractualisée par le port d'entrée `AddTodoItem`.
 
 # Exercice 3 - Ecriture de tests
 _Temps estimé : 20 mins_
@@ -113,14 +116,8 @@ _Temps estimé : 20 mins_
 
 * Implémentez (en junit) des TU sur la règle de gestion qui consiste à afficher `[LATE!]` dans la description d'un item en retard de plus de 24h.
 
-*Quels types de tests devra-t-on écrire pour les adapteurs ?* 
+IMPORTANT: [Question] Quels types de tests devra-t-on écrire pour les adapteurs ? 
 
-*Que teste-on dans ce cas ?*
+IMPORTANT: [Question] Que teste-on dans ce cas ? 
 
-*S'il vous reste du temps, écrivez quelques uns de ces types de test.*
-
-[TIP]
-=====
-- pour tester l'adapter REST, utilisez l'annotation `@WebMvcTest(controllers = TodoListController.class)`
-- Voir cette https://spring.io/guides/gs/testing-web/[documentation]
-=====
+* S'il vous reste du temps, écrivez quelques uns de ces types de test.
